# STER-VLM-Spatio-Temporal-With-Enhanced-Reference-Vision-Language-Models

./: .gitignore  README.md  pyproject.toml  requirements.txt
src_cleaned/postprocess/: README.md  postprocess_caption.py  postprocess_vqa.py
src_cleaned/setup/: README.md  extract_draw_test.sh  extract_draw_trainval.sh  transform_test.sh  transform_trainval.sh
src_cleaned/setup/preprocess/draw/: bdd_draw.py  wts_draw.py
src_cleaned/setup/preprocess/extract/: README.md  extract_bbox_annotated.py  extract_bbox_generated.py  extract_caption.py  extract_fixed_and_not_fixed_caption.py  extract_gaze.py  extract_vqa.py  prepare_fixed_and_notfixed_caption.sh
src_cleaned/setup/preprocess/transform/: match_caption.py  transform_component.py  transform_merge_enhanced.py
src_cleaned/setup/preprocess_test/: draw_bbox.py  extract_bbox_annotated.py  extract_bbox_generated.py  extract_vqa.py  transform_component.py  transform_merge_enhanced.py
src_cleaned/train/: README.md  requirements.txt
src_cleaned/train/Qwen2.5-VL/cookbooks/: captioning.ipynb  video_understanding.ipynb  vision_process.py
src_cleaned/train/Qwen2.5-VL/qwen-vl-finetune/: README.md
src_cleaned/train/Qwen2.5-VL/qwen-vl-finetune/config/deepspeed/: single_gpu.json
src_cleaned/train/Qwen2.5-VL/qwen-vl-finetune/qwenvl/data/: __init__.py  data_qwen.py  data_qwen_packed.py
src_cleaned/train/Qwen2.5-VL/qwen-vl-finetune/qwenvl/train/: argument.py  evaluation.py  evaluation_v2.py  inference.py  inference_lora.py  merge.py  metrics.py  (+2 more)
src_cleaned/utils/: README.md  choose_image.py  choose_prompt.py
