[project]
name = "aicity-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.4.0",
    "cider",
    "datasets>=3.6.0",
    "decord>=0.6.0",
    "deepspeed==0.16.4",
    "ffmpeg-python>=0.2.0",
    "flash-attn>=2.7.4.post1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "opencv-python>=4.11.0.86",
    "peft>=0.15.2",
    "pycocoevalcap>=1.2",
    "rouge-score>=0.1.2",
    "setuptools>=80.9.0",
    "torch==2.6.0",
    "torchcodec>=0.4.0",
    "torchvision==0.21.0",
    "transformers>=4.52.3",
    "wandb>=0.19.11",
]
